--- a/app/assets/stylesheets/admin/articles.css
+++ b/app/assets/stylesheets/admin/articles.css
@@ -46,6 +46,9 @@ pre.example {
 .top-actions {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  margin-bottom: 1em;
+  align-items: top;
+}
+
+.admin-articles {
+  margin: 0 auto;
 }
