--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -127,7 +127,7 @@ table th {
 }
 
 table,
-.highlight>pre,
+.highlight > pre,
 pre.example {
   max-height: 70vh;
   margin: 1em 0;
@@ -185,7 +185,6 @@ figure figcaption {
   margin: 0.2em 0;
 }
 
-
 .posts {
   margin: 0;
   list-style: none;
@@ -222,11 +221,40 @@ figure figcaption {
   justify-content: center;
 }
 
-.pagy a+a {
+.pagy a + a {
   margin-left: 0.5em;
 }
 
 .container {
   margin: 0 auto;
   max-width: 1000px;
+}
+
+.search-form {
+  margin: 0 auto;
+}
+
+.search-form form {
+  margin: 0 auto;
+  text-align: center;
+}
+
+form .input {
+  width: 50%;
+  padding: 0.5em 1em 0.5em 0em;
+  border-radius: 20px;
+  border: 2px solid #ccc;
+  text-align: right;
+}
+
+.input:focus {
+  outline: none;
+  border-color: #fa6432;
+}
+
+svg {
+  width: 2em;
+  height: 2em;
+  vertical-align: middle;
+  color: black;
 }
