--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -1,13 +1,22 @@
 header {
+  background: white;
+  position: relative;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+.header-content {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
 }
 
 header nav {
   font-size: 0.875em;
   line-height: 1.25em;
   font-weight: 600;
-  margin: auto 0;
 }
 
 header a {
@@ -16,7 +25,7 @@ header a {
 }
 
 span.current {
-  color: #E9204F;
+  color: #e9204f;
   display: inline-flex;
   position: relative;
 }
@@ -25,32 +34,19 @@ span.current::after {
   position: absolute;
   content: '';
   height: 2px;
-  /* adjust this to move up and down. you may have to adjust the line height of the paragraph if you move it down a lot. */
   bottom: -4px;
-
-
-  /******
- optional values below
- ******/
-
-  /* center - (optional) use with adjusting width   */
   margin: 0;
   left: 0;
   right: 0;
   width: 75%;
   background: green;
-
-  /* optional animation */
-  -o-transition: .5s;
-  -ms-transition: .5s;
-  -moz-transition: .5s;
-  -webkit-transition: .5s;
-  transition: .5s;
+  transition: 0.5s;
 }
 
 nav ul {
   display: flex;
   margin: 0;
+  padding: 0;
 }
 
 nav li {
@@ -63,4 +59,70 @@ nav li {
   font-weight: bold;
   text-decoration: none;
   color: #000;
+}
+
+.mobile-menu-button {
+  display: none;
+  background: none;
+  border: none;
+  padding: 0.5rem;
+  cursor: pointer;
+}
+
+.hamburger {
+  display: block;
+  position: relative;
+  width: 24px;
+  height: 2px;
+  background: #000;
+}
+
+.hamburger::before,
+.hamburger::after {
+  content: '';
+  position: absolute;
+  width: 24px;
+  height: 2px;
+  background: #000;
+  transition: transform 0.3s;
+}
+
+.hamburger::before {
+  top: -6px;
+}
+
+.hamburger::after {
+  bottom: -6px;
+}
+
+/* Mobile styles */
+@media (max-width: 768px) {
+  .mobile-menu-button {
+    display: block;
+  }
+
+  .nav-menu {
+    display: none;
+    width: 100%;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    padding: 1rem;
+  }
+
+  .nav-menu.is-open {
+    display: block;
+  }
+
+  nav ul {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  nav li {
+    margin: 0.5em 0;
+    width: 100%;
+    text-align: center;
+    font-size: 1.5em;
+  }
 }
