--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,26 +1,25 @@
-<% @nav_links = [
-  { name: "Home", path: root_path },
-  { name: "Blog", path: blog_path },
-]%>
+<% @nav_links = [{ name: "Home", path: root_path }, { name: "Blog", path: blog_path }] %>
+<% @admin_nav_links = [{ name: "Articles", path: admin_articles_path }] %>
 
-<% @admin_nav_links = [
-  { name: "Articles", path: admin_articles_path },
-]%>
+<header data-controller="navbar">
+  <div class="header-content">
+    <%= link_to application_title, root_path, class: "logo" %>
+    <button class="mobile-menu-button" data-action="click->navbar#toggleMenu" aria-label="Toggle menu">
+      <%= render_icon "hamburger" %>
+    </button>
+  </div>
 
-
-<header>
-  <%= link_to application_title, root_path, class: "logo" %>
-  <nav>
+  <nav data-navbar-target="menu" class="nav-menu">
     <ul class="nav-list">
       <% (controller.controller_path.include?("admin/") ? @admin_nav_links : @nav_links ).each do |link| %>
-      <li>
-        <%= link_to_unless_current(link[:name], link[:path]) do %>
-        <span class="current">
-          <span class="visuallyhidden">Current Page: </span>
-          <%= link[:name] %>
-        </span>
-        <%end%>
-      </li>
+        <li>
+          <%= link_to_unless_current(link[:name], link[:path]) do %>
+            <span class="current">
+              <span class="visuallyhidden">Current Page:</span>
+              <%= link[:name] %>
+            </span>
+          <% end %>
+        </li>
       <% end %>
 
       <li>
@@ -28,11 +27,10 @@
       </li>
 
       <% if authenticated? %>
-      <li>
-        <%= link_to "Admin" , admin_articles_path, class: "nav-item" %>
-      </li>
+        <li>
+          <%= link_to "Admin", admin_articles_path, class: "nav-item" %>
+        </li>
       <% end %>
     </ul>
   </nav>
-  </div>
 </header>
