--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,17 +1,17 @@
 <% content_for :head do %>
-<title>Blog</title>
-<%= stylesheet_link_tag "post" %>
+  <title>Blog</title>
+  <%= stylesheet_link_tag "post" %>
 <% end %>
 
 <div class="post">
   <p id="notice"><%= notice %></p>
 
   <h1><%= @article.title %></h1>
-  <hr />
+  <hr/>
 
   <div>
     <%= @article.markdown.html_safe %>
   </div>
 
-  <%= link_to 'Back', blog_path %>
+  <%= link_to "Back", blog_path %>
 </div>
