--- a/app/views/admin/articles/new.html.erb
+++ b/app/views/admin/articles/new.html.erb
@@ -1,21 +1,23 @@
 <% content_for :head do %>
-<%= stylesheet_link_tag "markdown-form" %>
+  <%= stylesheet_link_tag "markdown-form" %>
+  <%= stylesheet_link_tag "marksmith" %>
 <% end %>
 
-
 <%= form_with model: @article, local: true, url: admin_articles_path, class: "markdown-form" do |form| %>
-<div class="title-field">
-  <%= form.text_field :title, placeholder:"Article title" , class: "title-text-input" %>
-  <hr>
-</div>
-
-<div class="field">
-  <%= form.text_area :content, class: "body-text-input" %>
-</div>
-<div class="field">
-  <%= form.date_select :publish_date, class: "body-text-input" %>
-</div>
-<div class="actions">
-  <%= form.submit %>
-</div>
+  <div class="title-field">
+    <%= form.text_field :title, placeholder: "Title", class: "title-text-input" %>
+    <hr>
+  </div>
+  <div class="field">
+    <%= form.text_area :description, placeholder: "Description", class: "body-text-input" %>
+  </div>
+  <div class="field">
+    <%= form.marksmith :content %>
+  </div>
+  <div class="field">
+    <%= form.date_select :publish_date, class: "body-text-input" %>
+  </div>
+  <div class="actions">
+    <%= form.submit %>
+  </div>
 <% end %>
