Update turbo_frame_tag in articles index view to set target to "_top"

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,9 +6,7 @@
 <div>
   <p style="color: green"><%= notice %></p>
 
-  <h1>Blog</h1>
-
-  <%= turbo_frame_tag "posts" do %>
+  <%= turbo_frame_tag "posts", target: "_top" do %>
     <ul class="posts">
       <% @articles.each do |article| %>
         <% cache article do %>
