--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,15 +3,11 @@
   <%= stylesheet_link_tag "post" %>
 <% end %>
 
-<div class="post">
-  <p id="notice"><%= notice %></p>
-
-  <h1><%= @article.title %></h1>
-  <hr/>
-
-  <div>
+<div class="p-8 m-auto" style=" margin: 0 auto;">
+  <div class="prose">
+    <h1 class="font-bold"><%= @article.title %></h1>
+    <hr/>
     <%= @article.markdown.html_safe %>
+    <!-- This is the rendered markdown content -->
   </div>
-
-  <%= link_to "Back", blog_path %>
 </div>
