--- a/app/views/icons/_hamburger.html.erb
+++ b/app/views/icons/_hamburger.html.erb
@@ -8,6 +8,7 @@
   xml:space="preserve"
   xmlns="http://www.w3.org/2000/svg"
   xmlns:xlink="http://www.w3.org/1999/xlink"
+  class="<%=classes%>"
 >
 
   <g>
